--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,7 @@
   <meta property="og:type" content="website">
 
   <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
