Re-organize project

--- a/web/login.html
+++ b/web/login.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
-<body>
+<body class="center" style="background-color:#242526;">
   <form id="login" action="/api/login" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
