--- a/web/login.html
+++ b/web/login.html
@@ -20,7 +20,7 @@
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
     <label for="password">Password:</label>
-    <input type="text" id="password" name="password">
+    <input type="password" id="password" name="password">
     <input class="little_button" type="submit" value="Login"/>
   </form>
 </body>
