--- a/web/login.html
+++ b/web/login.html
@@ -11,17 +11,22 @@
   <meta property="og:type" content="website">
 
   <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">>
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body class="center" style="background-color:#242526;">
-  <form id="login" action="/api/login" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password">
-    <input class="little_button" type="submit" value="Login"/>
-  </form>
+  <div class="header">
+  </div>
+
+  <div class="login">
+    <form id="login" action="/api/login" method="post">
+      <label class="label" for="username">Username:</label>
+      <input type="text" id="username" name="username">
+      <label class="label" for="password">Password:</label>
+      <input type="password" id="password" name="password">
+      <input class="little_button" type="submit" value="Login"/>
+    </form>
+  </div>
 </body>
 </html>
