--- a/web/login.html
+++ b/web/login.html
@@ -19,14 +19,14 @@
   <div class="header">
   </div>
 
-  <div class="login">
-    <form id="login" action="/api/login" method="post">
+  <div class="container">
+    <form class="login" id="login" action="/api/login" method="post">
       <label class="label" for="username">Username:</label>
       <input type="text" id="username" name="username">
       <label class="label" for="password">Password:</label>
       <input type="password" id="password" name="password">
       <input class="little_button" type="submit" value="Login"/>
     </form>
-  </div>
+    </div>
 </body>
 </html>
